# mira-companion

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_hello.ipynb  02_first_chain.ipynb  03_first_graph.ipynb  04_router.ipynb  05_memory.ipynb  06_inspect_memory.ipynb  07_long_term_memory.ipynb
src/mira/: settings.py
src/mira/core/: prompts.py
src/mira/graph/: edges.py  graph.py  nodes.py  state.py
src/mira/graph/utils/: audio.py  chains.py  image.py  memory.py
src/mira/interfaces/chainlit/: app.py
src/mira/interfaces/telegram/: app.py
