[project]
name = "mira"
version = "0.1.0"
description = "Mira — a learning rebuild of an AI companion"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.13",
    "langchain-groq>=0.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]